# yewi-kit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  compose.yml  index.html  package.json  tailwind.config.js
.github/workflows/: deploy.yml
cli/: Cargo.toml  README.md
cli/src/: add.rs  constants.rs  github.rs  init.rs  main.rs  utils.rs
public/: _routes.json  robots.txt  sitemap.xml
scripts/: lib.rs
src/: main.rs
src/app/: mod.rs  page.rs  routes.rs
src/app/avatar/: mod.rs
src/app/avatar_group/: mod.rs
src/app/button/: mod.rs
src/app/docs/: mod.rs  page.rs  routes.rs
src/app/file_input/: mod.rs
src/app/input/: mod.rs
src/app/installation/: mod.rs
src/app/not_found/: mod.rs
src/app/password_input/: mod.rs
src/components/: mod.rs
src/components/avatar/: avatar.scss  component.toml  mod.rs  style.scss
src/components/avatar_group/: avatar_group.scss  component.toml  hooks.rs  mod.rs  style.scss  types.rs
src/components/badge/: badge.scss  component.toml  hooks.rs  mod.rs  types.rs  use_badge.rs
src/components/breadcrumbs/: breadcrumbs.scss  component.toml  mod.rs
src/components/button/: button.scss  component.toml  hooks.rs  mod.rs  types.rs  use_button.rs
src/components/card/: card.scss  component.toml  mod.rs
src/components/carousel/: carousel.scss  component.toml  hooks.rs  mod.rs  provider.rs  store.rs
src/components/checkbox/: checkbox.scss  component.toml  hooks.rs  mod.rs  types.rs
src/components/code_preview/: code_preview.scss  component.toml  hooks.rs  mod.rs
src/components/collapse/: collapse.scss  component.toml  hooks.rs  mod.rs  types.rs
src/components/divider/: component.toml  divider.scss  mod.rs
src/components/dropdown/: component.toml  dropdown.scss  hooks.rs  mod.rs  provider.rs  store.rs  types.rs
src/components/file_input/: component.toml  file_input.scss  mod.rs  style.scss  types.rs
src/components/file_preview/: component.toml  file_preview.scss  mod.rs  types.rs
src/components/input/: component.toml  hooks.rs  input.scss  mod.rs  types.rs  use_input.rs
src/components/link/: component.toml  link.scss  mod.rs  types.rs
src/components/modal/: component.toml  hooks.rs  mod.rs  modal.scss  provider.rs  store.rs
src/components/pagination/: component.toml  hooks.rs  mod.rs  (+3 more)
src/features/: mod.rs
src/previews/: mod.rs  previews.scss
src/styles/: components.scss  features.scss  main.scss
src/types/: components.rs  enums.rs  mod.rs  theme.rs
src/utils/: mod.rs  shades.rs
(+182 files in other folders)
