[package]
name = "yewi-kit"
version = "1.0.0"
edition = "2024"

[dependencies]
yew = { version = "0.22.0", features = ["csr", "serde"] }
wasm-logger = "0.2.0"
yew-router = "0.19.0"
web-sys = { version = "0.3.83", features = ["DataTransfer", "Navigator", "Clipboard"] }
gloo = "0.11.0"
yew_icons = { version = "0.9.0", features = ["lucide"] }

[[bin]]
name = "generate_sitemap"
path = "scripts/lib.rs"