[package]
name = "yewi-cli"
version = "0.1.1"
edition = "2024"
authors = ["Fiaro fiaromiangaly@gmail.com"]
description = "CLI tool for managing yewi-kit components in Yew projects"
homepage = "https://yewi.pages.dev"
repository = "https://github.com/Emii-lia/yewi-kit"
keywords = ["yew", "ui-kit", "react", "components", "wasm"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"

[[bin]]
name = "yewi"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true